# shorts-clipper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUDIT_ROADMAP.md  BEGINNING_SCOREBOARD.md  BENCHMARK_INTEGRITY_AUDIT.md  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  Dockerfile  EDITORIAL_EVIDENCE.md  IVV_AUDIT_REPORT.md  LICENSE  PROJECT_STATE.md  README.md  RELEASE_MANIFEST.md  RELEASE_NOTES_V3.2.md  RELEASE_REPORT.md  SECURITY.md  VALIDATION_TRACE.md  ab_test_virality.py  analyzer.py  audit_script.py  audit_trending.py  docker-compose.yml  editor.py  mock_ab_test_virality.py  pipeline.py  production_audit_report.md  pyproject.toml  requirements.txt  run_beginning_validation.py  scout.py  scout_audit_report.md  scout_v2_implementation_report.md  scout_v2_stabilization_report.md  subtitles.py  test_api.py  (+3 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: API.md  HUGGINGFACE.md  RELEASE_NOTES_SCOUT_V2.md  ROADMAP.md  publishing.md  publishing_engine_report.md
docs/internal/: scout_v2_audit_report.md
shorts_clipper/: __init__.py  __main__.py
shorts_clipper/analyze/: __init__.py  feedback.py
tests/: conftest.py  test_api_fixes.py  test_audit_fixes.py  test_cache_partial_hit.py  test_editorial_core.py  test_fallback.py  test_fallback_metadata_respects_niche.py  test_foundations.py  test_gemini_fallback.py  test_instagram_publisher.py  test_new_modules.py  test_publishers.py  test_rendering.py  test_scout_v2.py  test_sqlite_leak.py
(+91 files in other folders)
