[project]
name = "shorts-clipper"
version = "0.1.0"
description = "Open-source AI shorts clipping pipeline."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "faster-whisper>=1.0",
  "google-genai>=1.0",
  "yt-dlp>=2024.1.0",
  "google-api-python-client>=2.0.0",
  "google-auth-oauthlib>=1.0.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "anyio>=4.0",
  "curl-cffi>=0.15.0",
]

[project.scripts]
shorts-clipper = "shorts_clipper.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["shorts_clipper*"]
